fixup! Setup gitlab ci
we want this now that testing is done

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,8 +65,8 @@ verify build environment:
 
 push build environment:
   <<: *environment_common
-#  except:
-#  - /^(?!master$)/
+  except:
+  - /^(?!master$)/
   stage: push
   script:
   - docker login -u gitlab-ci-token -p "$CI_JOB_TOKEN" "$CI_REGISTRY"
