fixup! Setup gitlab ci
we dont to run the test in docker this way, we need to keep the artifact from the previous step/stage

note that we dont have to run the test in the buildenv, but if it works, that makes it easier

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,8 +104,10 @@ build package:
     - ./rootfs*.xz.img
     expire_in: 3 days
 
-test artifact:
+test package:
   stage: test
-  <<: *environment_common
+  <<: *pkg_common
+  dependencies:
+  - build package
   script:
-    - docker run --rm -w /tests "$CI_COMMIT_SHA:$CI_PIPELINE_ID" ./rootfs.sh -r /build/rootfs
+  - ./tests/rootfs.sh rootfs*.xz.img
