Make CI work again
In commit 014d35e8de034 "Made local build script docker compatible"
some paths where changed that broke CI from working. This patch
addresses that.

Addresses issue EMP-271

Signed-off-by: Olliver Schinagl <oliver@schinagl.nl>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,7 +101,7 @@ build package:
   artifacts:
     name: "$CI_COMMIT_REF_NAME-$CI_COMMIT_SHA"
     paths:
-    - ./rootfs*.xz.img
+    - ./.build_*/rootfs*.xz.img
     expire_in: 3 days
 
 test package:
@@ -110,4 +110,4 @@ test package:
   dependencies:
   - build package
   script:
-  - ./tests/rootfs.sh rootfs*.xz.img
+  - ./tests/rootfs.sh .build_*/rootfs*.xz.img
