--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,7 +101,7 @@ build package:
   artifacts:
     name: "$CI_COMMIT_REF_NAME-$CI_COMMIT_SHA"
     paths:
-    - ./.build_*/rootfs*.xz.img
+    - ./.build_*/um-update*.xz.img
     expire_in: 3 days
 
 test package:
@@ -110,4 +110,4 @@ test package:
   dependencies:
   - build package
   script:
-  - ./tests/rootfs.sh .build_*/rootfs*.xz.img
+  - ./tests/toolbox_image.sh .build_*/um-update*.xz.img
