buildenv: Add privileged flag for buildenv test
To be able to properly determine if the build environment is okay, we
need to mount the binfmt-misc pseudo filesystem. This requires
privileged mode.

Signed-off-by: Olliver Schinagl <oliver@schinagl.nl>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ verify build environment:
   stage: verify
   <<: *environment_common
   script:
-    - docker run --rm -w /tests "$CI_COMMIT_SHA:$CI_PIPELINE_ID" ./buildenv.sh
+  - docker run --privileged --rm -w /tests "$CI_COMMIT_SHA:$CI_PIPELINE_ID" ./buildenv.sh
 
 push build environment:
   <<: *environment_common
