--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,103 +6,123 @@
 # GitLab CI package build is split up into two parts.
 # * Build environment: creates the docker image that is needed for package generation
 # * Package generation: creates the final artifact
+#
+# Due to missing feature gitlab-org/gitlab-ce#29447 we check for dockerimage
+# changes using the tag 'dockerimage'.
 
 stages:
 - lint
 - prepare
-- verify
 - push
 - build
 - test
 - cleanup
 
 # Common requisites
-# ==========
-.parameters common: &parameters_common
+# =================
+.parameters_common: &parameters_common
   tags:
-  - docker
+    - docker
 
-.shell linting common: &shell_linting_common
+.shell_linting_common: &shell_linting_common
   <<: *parameters_common
   image: registry.hub.docker.com/koalaman/shellcheck-alpine:stable
   stage: lint
 
-lint build environment:
+lint_build_environment:
   <<: *shell_linting_common
   script:
-  - shellcheck -C -f tty -s sh tests/buildenv.sh
+    - shellcheck -C -f tty -s sh test/buildenv.sh
 
-lint package build script:
+lint_local_build_script:
   <<: *shell_linting_common
   script:
-  - shellcheck -C -f tty -s sh build.sh
+    - shellcheck -C -f tty -s sh build_for_ultimaker.sh
 
-lint local build script:
+lint_package_build_script:
   <<: *shell_linting_common
   script:
-  - shellcheck -C -f tty -s sh build_for_ultimaker.sh
+    - shellcheck -C -f tty -s sh build.sh
+
+lint_artifact_test_script:
+  <<: *shell_linting_common
+  script:
+    - shellcheck -C -f tty -s sh test/toolbox_image.sh
+lint_local_build_script:
+  <<: *shell_linting_common
+  script:
+    - shellcheck -C -f tty -s sh build_for_ultimaker.sh
+
+lint_package_build_script:
+  <<: *shell_linting_common
+  script:
+    - shellcheck -C -f tty -s sh build.sh
+
+lint_artifact_test_script:
+  <<: *shell_linting_common
+  script:
+    - shellcheck -C -f tty -s sh test/toolbox_image.sh
 
 # Build environment
+# The 'prepare' and the 'push' stages are executed conditionally. They both include
+# 'environment_common' that makes sure that the stage is only performed when the
+# commit message contains the string "dockerimage".
 # =================
-.build environment common: &environment_common
+.build_environment_common: &environment_common
   <<: *parameters_common
   image: registry.hub.docker.com/library/docker:stable
   only:
     variables:
-    - $CI_COMMIT_MESSAGE =~ /dockerfile/i
+      - $CI_COMMIT_MESSAGE =~ /dockerimage/i
 
-prepare build environment:
+prepare_build_environment:
   <<: *environment_common
   stage: prepare
   script:
-  - docker build --rm -t "$CI_COMMIT_SHA:$CI_PIPELINE_ID" .
-
-verify build environment:
-  stage: verify
-  <<: *environment_common
-  script:
-  - |
-    docker run \
+    - docker build --rm -t "${CI_COMMIT_SHA}:${CI_PIPELINE_ID}" .
+    - |
+        docker run \
         --rm \
         --privileged \
         -e "ARM_EMU_BIN=${ARM_EMU_BIN}" \
         -v "${ARM_EMU_BIN}:${ARM_EMU_BIN}:ro" \
-        -w /tests \
         "$CI_COMMIT_SHA:$CI_PIPELINE_ID" \
-        sh -x ./buildenv.sh
+        sh -x /test/buildenv.sh
 
-push build environment:
+# The push to the Docker registry is thus only executed when the commit message contains
+# 'dockerimage' and the working branch is 'master'
+push_build_environment:
   <<: *environment_common
   except:
-  - /^(?!master$)/
+    - /^(?!master$)/
   stage: push
   script:
-  - docker login -u gitlab-ci-token -p "$CI_JOB_TOKEN" "$CI_REGISTRY"
-  - docker tag  "$CI_COMMIT_SHA:$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA"
-  - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA"
-  - docker tag  "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA" "$CI_REGISTRY_IMAGE:latest"
-  - docker push "$CI_REGISTRY_IMAGE:latest"
+    - docker login -u gitlab-ci-token -p "${CI_JOB_TOKEN}" "${CI_REGISTRY}"
+    - docker tag  "${CI_COMMIT_SHA}:${CI_PIPELINE_ID}" "${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}"
+    - docker push "${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}"
+    - docker tag  "${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}" "${CI_REGISTRY_IMAGE}:latest"
+    - docker push "${CI_REGISTRY_IMAGE}:latest"
 
-cleanup build environment:
+cleanup_build_environment:
   <<: *environment_common
   stage: cleanup
   when: always
   script:
-  - |
-    if docker inspect --type image "$CI_COMMIT_SHA:$CI_PIPELINE_ID" 1> /dev/null; then
-      docker rmi "$CI_COMMIT_SHA:$CI_PIPELINE_ID"
-    fi
+    - |
+      if docker inspect --type image "${CI_COMMIT_SHA}:${CI_PIPELINE_ID}" 1> /dev/null; then
+        docker rmi "${CI_COMMIT_SHA}:${CI_PIPELINE_ID}"
+      fi
 
 # Package generation
+# The actual artifact build should always be done with the latest Docker registry image,
+# unless the build environment is modified. Gitlab CI syntax is limited and therefore
+# multiple build package jobs are defined in order to catch all the scenarios and avoid
+# multiple build job execution.
 # ==================
-.build pkg common: &pkg_common
+.build_pkg_common: &pkg_common
   <<: *parameters_common
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
-  image: "$CI_REGISTRY_IMAGE:latest"
-
-build package:
-  <<: *pkg_common
   stage: build
   script:
   - ./build.sh
@@ -112,10 +132,41 @@ build package:
     - ./.build_*/um-update*.xz.img
     expire_in: 3 days
 
-test package:
-  stage: test
+
+# Build the package on a non-master branch in a modified Docker image.
+build:dev_pkg:
   <<: *pkg_common
+  except:
+    - master
+  only:
+    variables:
+      - $CI_COMMIT_MESSAGE =~ /dockerimage/i
+  image: "${CI_COMMIT_SHA}:${CI_PIPELINE_ID}"
+
+# Build the package on a non-master branch in the latest Docker image.
+build:dev_pkg_latest:
+  <<: *pkg_common
+  except:
+    refs:
+      - master
+    variables:
+      - $CI_COMMIT_MESSAGE =~ /dockerimage/i
+  image: "${CI_REGISTRY_IMAGE}:latest"
+
+# Build the package on a the master branch in the latest Docker image.
+build:master_pkg:
+  <<: *pkg_common
+  only:
+    - master
+  image: "${CI_REGISTRY_IMAGE}:latest"
+
+# Test package
+test_pkg:
+  stage: test
   dependencies:
-  - build package
+    - build:dev_pkg
+    - build:dev_pkg_latest
+    - build:master_pkg
   script:
-  - ./tests/toolbox_image.sh .build_*/um-update*.xz.img
+    - ./test/toolbox_image.sh .build_*/um-update*.xz.img
+
