Add update rootfs files script
This script takes two argument, the 'update source' and the 'target
storage device' and synchronizes (source -> target) the files to
the second partitition of the given target device. The arguments
can be passed as a parameter or through the environment. Excluding
files or directories can be done through the exlude list.

Contributes to EMP-273, adresses EMP-311

Signed-off-by: Raymond Siudak <r.siudak@ultimaker.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,11 @@ lint_build_environment:
   script:
     - shellcheck -C -f tty -s sh test/buildenv.sh
 
+lint_update_files_script:
+  <<: *shell_linting_common
+  script:
+    - shellcheck -C -f tty -s sh scripts/50_update_files.sh
+
 lint_local_build_script:
   <<: *shell_linting_common
   script:
