--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,11 @@ lint_build_environment:
   script:
     - shellcheck -C -f tty -s sh test/buildenv.sh
 
+lint_entrypoint_script:
+  <<: *shell_linting_common
+  script:
+    - shellcheck -C -f tty -s sh scripts/start_update.sh
+
 lint_update_files_script:
   <<: *shell_linting_common
   script:
@@ -53,6 +58,11 @@ lint_package_build_script:
   <<: *shell_linting_common
   script:
     - shellcheck -C -f tty -s sh build.sh
+
+lint_prepare_disk_script:
+  <<: *shell_linting_common
+  script:
+    - shellcheck -C -f tty -s sh scripts/30_prepare_disk.sh
 
 # Build environment
 # The 'prepare' and the 'push' stages are executed conditionally. They both include
