Updates after review of EMP-388

--- a/debian/control.in
+++ b/debian/control.in
@@ -1,6 +1,6 @@
 Package: ${PACKAGE_NAME}
 Version: ${RELEASE_VERSION}
 Architecture: armhf
-Maintainer: Ultimaker <info@ultimaker.com>
+Maintainer: Ultimaker <software-embedded-platform@ultimaker.com>
 Priority: optional
 Description: Toolbox used during the system update.
