CI: also run test with the common parameters
With commit b4aa592dea4a ("Update CI configuration to trigger building in
temporary docker images") the common build paramaters (pkg_common then)
where accidentally dropped. This removed the tag 'docker' from the test
build job and would have precluded it from ever running.

With EMP-386 the CI environment was setup a new and the flag
'run-untagged' was rightfully removed. This caused tests to no longer
work however.

Signed-off-by: Olliver Schinagl <oliver@schinagl.nl>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -168,6 +168,7 @@ build:master_docker_latest:
 
 # Test package
 .test_pkg_common: &test_pkg_common
+  <<: *parameters_common
   stage: test
   dependencies:
     - build:dev_docker_candidate
