Add update_files script test template
Add the initial minimal scrip
Add test execution to build_for_ultimaker
Add test execution to CI

Contributes to EMP-389 and EMP-407

Signed-off-by: Raymond Siudak <r.siudak@ultimaker.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -163,6 +163,7 @@ build:master_docker_latest:
     - build:master_docker_latest
   script:
     - ./test/toolbox_image.sh ".build_"*"/um-update"*".xz.img"
+    - ./test/update_files.sh ".build_"*"/um-update"*".xz.img"
 
 # Test the package on a non-master branch in a modified Docker image.
 test:dev_docker_candidate:
