--- a/debian/control.in
+++ b/debian/control.in
@@ -1,6 +1,6 @@
-Package: ${PACKAGE_NAME}
-Version: ${RELEASE_VERSION}
-Architecture: armhf
+Package: @PACKAGE_NAME@
+Version: @RELEASE_VERSION@
+Architecture: @ARCH@
 Maintainer: Ultimaker <software-embedded-platform@ultimaker.com>
 Priority: optional
 Description: Toolbox used during the system update.
