packaging: Define a debian section
The toolbox is a utility thus lets put it under the utils section.

Contributes to EMP-416

Signed-off-by: Olliver Schinagl <oliver@schinagl.nl>

--- a/debian/control.in
+++ b/debian/control.in
@@ -3,4 +3,5 @@ Version: @RELEASE_VERSION@
 Architecture: @ARCH@
 Maintainer: Ultimaker <software-embedded-platform@ultimaker.com>
 Priority: optional
+Section: utils
 Description: Toolbox used during the system update.
