--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,6 +106,9 @@ cleanup_build_environment:
 # multiple build package jobs are defined in order to catch all the scenarios and avoid
 # multiple build job execution.
 # ==================
+variables:
+  PREFIX: "${PREFIX:-/usr}"
+
 .build_pkg_common: &build_pkg_common
   <<: *parameters_common
   stage: build
