--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ prepare_build_environment:
         -e "ARM_EMU_BIN=${ARM_EMU_BIN}" \
         -v "${ARM_EMU_BIN}:${ARM_EMU_BIN}:ro" \
         "$CI_COMMIT_SHA:$CI_PIPELINE_ID" \
-        sh -x /test/buildenv.sh
+        /test/buildenv.sh
 
 # The push to the Docker registry is thus only executed when the commit message contains
 # 'dockerimage' and the working branch is 'master'
